--- a/Palais_de_tokyo.css
+++ b/Palais_de_tokyo.css
@@ -10,29 +10,32 @@ body {
   grid-template-columns: repeat(10, 1fr);
 }
 body .block-logo {
-  background-color: aqua;
-  height: 20vh;
   grid-area: 1/1/3/4;
 }
 body .block-menu {
-  background-color: aqua;
-  height: 10vh;
   grid-area: 1/6/2/11;
 }
 body .block-title {
-  background-color:  rgb(255, 255, 255);
-  height: 20vh;
+  background-color: rgb(255, 255, 255);
   grid-area: 3/1/6/11;
 }
 body .block-main {
   background-color: white;
-  height: 20vh;
   grid-area: 6/1/10/11;
 }
 body .block-footer {
   background-color: black;
-  height: 40vh;
   grid-area: 10/1/12/11;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+body .footer-text {
+  text-decoration: none;
+}
+body footer-text:hover {
+  color: white;
 }
 
-/*# sourceMappingURL=Palais_de_tokyo.css.map */
+/*# sourceMappingURL=palais_de_tokyo.css.map */
