--- a/Palais_de_tokyo.scss
+++ b/Palais_de_tokyo.scss
@@ -8,37 +8,40 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 20px;
     
 }
+
 body{
     height: 100vh;
     display: grid;
     grid-template-columns: repeat(10,1fr);
     
     .block-logo{
-        background-color: aqua;
-        //height: 20vh;
         grid-area: 1/1/3/4;
     }
     .block-menu{
-        background-color: aqua;
-        //height: 10vh;
         grid-area: 1/6/2/11;
     }
     .block-title{
         background-color: rgb(255, 255, 255);
-        //height: 20vh;
         grid-area: 3/1/6/11;
     }
     .block-main{
         background-color: white;
-        //height: 20vh;
         grid-area: 6/1/10/11;
+        
     }
     .block-footer{
         background-color: black;
-        //height: 40vh;
         grid-area: 10/1/12/11;
-        @include vertical-center-element
+        @include vertical-center-element 
+        
+    }
+    .footer-text{
+        text-decoration: none;
+    }
+    footer-text:hover{
+        color: white;
     }
 }
