--- a/Palais_de_tokyo.css
+++ b/Palais_de_tokyo.css
@@ -1,41 +1,144 @@
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
+  font-size: large;
 }
 
 body {
   height: 100vh;
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  position: relative;
 }
 body .block-logo {
-  grid-area: 1/1/3/4;
-}
-body .block-menu {
-  grid-area: 1/6/2/11;
-}
-body .block-title {
-  background-color: rgb(255, 255, 255);
-  grid-area: 3/1/6/11;
-}
-body .block-main {
+  grid-area: 1/1/2/2;
+  height: 20vh;
+  position: sticky;
+  top: 0;
+  z-index: 10;
   background-color: white;
-  grid-area: 6/1/10/11;
-}
-body .block-footer {
-  background-color: black;
-  grid-area: 10/1/12/11;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 20px;
 }
-body .footer-text {
+body .block-logo .logo {
+  max-width: 100%;
+}
+body .block-menu {
+  grid-area: 1/2/2/4;
+  height: 20vh;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+body .block-menu .item-menu {
   text-decoration: none;
 }
-body footer-text:hover {
+body .block-menu .item-menu:hover {
+  color: orangered;
+}
+body .block-title {
+  background-color: white;
+  grid-area: 2/1/3/4;
+  height: 80vh;
+  background-image: url(images/Copie-de-Design-sans-titre-2020-10-19T000904.662.jpg);
+  background-size: cover;
+  position: relative;
+}
+body .block-title .button-histoire {
+  position: absolute;
+  bottom: 80px;
+  right: 120px;
+  padding: 30px;
+  border-radius: 20px;
+  background-color: black;
   color: white;
+  text-decoration: none;
+  opacity: 0.6;
+}
+body .block-title .button-histoire:hover {
+  background-color: black;
+  color: white;
+  opacity: 1;
+}
+body .block-main {
+  background-color: white;
+  grid-area: 3/1/4/4;
+  height: 60vh;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+}
+body .block-main .block-localisation {
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  flex-direction: column;
+}
+body .block-main .block-localisation .palais-tokyo-adress {
+  margin-top: 3vh;
+  text-align: center;
+}
+body .block-main .block-localisation .palais-tokyo-social {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  margin-top: 3vh;
+}
+body .block-main .block-localisation .palais-tokyo-social > a img {
+  width: 30px;
+  border-radius: 50%;
+}
+body .block-main .block-localisation > h3 {
+  font-size: 1.5em;
+}
+body .block-main .block-main-map {
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+body .block-main .block-main-map .map {
+  width: 60%;
+  height: 60%;
+  border: 0;
+}
+body .block-footer {
+  background-color: black;
+  grid-area: 4/1/5/4;
+  height: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  flex-direction: column;
+}
+body .block-footer .footer-link {
+  text-decoration: none;
+  color: white;
+}
+body .block-footer .footer-link:hover {
+  color: aqua;
+}
+body .block-footer > .footer-link {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  margin-top: 3vh;
+}
+body .block-footer > .footer-link > a img {
+  width: 30px;
+  border-radius: 50%;
 }
 
 /*# sourceMappingURL=palais_de_tokyo.css.map */
