--- a/Palais_de_tokyo.css
+++ b/Palais_de_tokyo.css
@@ -141,4 +141,31 @@ body .block-footer > .footer-link > a img {
   border-radius: 50%;
 }
 
+@media screen and (max-width: 590px) {
+  body .block-logo {
+    grid-area: 1/1/2/4;
+  }
+  body .block-menu {
+    grid-area: 2/1/3/4;
+  }
+  body .block-title {
+    grid-area: 3/1/4/4;
+  }
+  body .block-main {
+    grid-area: 4/1/5/4;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  body .block-main .block-main-map {
+    width: 100%;
+  }
+  body .block-main .block-localisation {
+    width: 100%;
+  }
+  body .block-footer {
+    grid-area: 5/1/6/4;
+  }
+}
+
 /*# sourceMappingURL=palais_de_tokyo.css.map */
