--- a/Palais_de_tokyo.scss
+++ b/Palais_de_tokyo.scss
@@ -142,5 +142,32 @@ body{
                 border-radius:50%;
             }           
         }
-    }   
+    }  
 }
+@media screen and (max-width: 590px){
+    body .block-logo{
+        grid-area: 1/1/2/4;
+        
+    }
+    body .block-menu{
+       grid-area: 2/1/3/4 
+    }
+    body .block-title{
+        grid-area:3/1/4/4  ;
+    }
+    body .block-main {
+        grid-area: 4/1/5/4;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .block-main-map{
+            width:100%;
+        }
+        .block-localisation{
+            width:100%;
+        }
+    }
+    body .block-footer {
+        grid-area: 5/1/6/4;
+    }
+} 
