--- a/Palais_de_tokyo_histoire.scss
+++ b/Palais_de_tokyo_histoire.scss
@@ -51,77 +51,55 @@ body{
         }
     }
 
-    .block-title{
-        background-color: white;
-        grid-area: 2/1/3/4;
-        height: 80vh;
-        background-image: url(images/Copie-de-Design-sans-titre-2020-10-19T000904.662.jpg);
-        background-size: cover;
-        position: relative;
-        .button-histoire{
-            position: absolute;
-            bottom: 80px;
-            right: 120px;
-            padding: 30px;
-            border-radius: 20px;
-            background-color: black;
-            color: white;
-            text-decoration: none;
-            opacity: 0.6;
-            //font-family: ;
-            &:hover{
-                background-color: black;
-                color: white;
-                opacity: 1;
-            }
-        }
-    }
-
+    
     .block-main{
         background-color: white;
-        grid-area: 3/1/4/4;
+        grid-area: 2/1/3/4;
         height: 60vh; 
         padding:10px;
         display: flex;
-        flex-direction: row;
-        .block-localisation{
-            width: 40%;
-            @include center-element;
-            flex-direction: column;
-            .palais-tokyo-adress{
-                margin-top: 3vh;
-                text-align: center;
-                
+        flex-direction: column;
+        margin-top:20px;
+        gap : 10vh;
+        background-color: rgb(228, 229, 230);
+        .block-histoire-1{
+            display: flex;
+            flex-direction: row;
+            justify-content: center; 
+            gap: 1vh;
+            .block-image{
+                width: 20%;
+                @include center-element;  
+                .picture{
+                    width: 60%;
+                } 
             }
-            .palais-tokyo-social{
-                display: flex;
-                gap: 10px;
-                justify-content: center;
-                margin-top: 3vh;
-                &>a img{
-                    width:30px;
-                    border-radius:50%;
-                }           
-            }
-            &>h3{
-                font-size: 1.5em;
+            .block-texte{
+                width: 40%;
             }
         }
-        .block-main-map{
-            width: 60%;
-            @include center-element;
-            .map{
-                width:60%; 
-                height:60%;
-                border:0;
+        .block-histoire-2{
+            display: flex;
+            flex-direction: row;
+            justify-content: center; 
+            gap: 1vh;
+            .block-image{
+                width: 20%;
+                @include center-element; 
+                .picture{
+                    width: 70%;
+                }  
             }
+            .block-texte{
+                width: 40%; 
+            }
+            
         }
-        
     }
 
     .block-footer{
         background-color: black;
-        grid-area: 4/1/5/4;
+        grid-area: 3/1/4/4;
         height: 20vh;
         @include center-element; 
         flex-direction: column; 
@@ -152,22 +130,37 @@ body{
     body .block-menu{
        grid-area: 2/1/3/4 
     }
-    body .block-title{
-        grid-area:3/1/4/4  ;
-    }
     body .block-main {
-        grid-area: 4/1/5/4;
+        grid-area: 3/1/4/4;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        .block-main-map{
-            width:100%;
+        gap: 5vh;
+        height: 100vh;
+        .block-histoire-1{
+            flex-direction: column;
+            gap: 2vh;
+            .block-image{
+                width: 100%;
+            }
+            .block-texte{
+                width: 100%; 
+            }
         }
-        .block-localisation{
-            width:100%;
+        .block-histoire-2{
+            flex-direction:column-reverse;
+            gap: 2vh;
+            .block-texte{
+                width: 100%; 
+            }
+            .block-image{
+                width: 100%;
+            }
         }
+        
     }
     body .block-footer {
-        grid-area: 5/1/6/4;
+        grid-area: 4/1/5/4;
     }
+
 } 
