--- a/Palais_de_tokyo.css
+++ b/Palais_de_tokyo.css
@@ -47,7 +47,7 @@ body .block-menu .item-menu:hover {
 body .block-title {
   background-color: white;
   grid-area: 2/1/3/4;
-  height: 80vh;
+  height: 60vh;
   background-image: url(images/Copie-de-Design-sans-titre-2020-10-19T000904.662.jpg);
   background-size: cover;
   position: relative;
@@ -56,7 +56,10 @@ body .block-title .button-histoire {
   position: absolute;
   bottom: 80px;
   right: 120px;
-  padding: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
   border-radius: 20px;
   background-color: black;
   color: white;
